fix: styling tweaks, switch to zinc for greys, tidy up spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,17 +59,41 @@
   --color-rose-900: oklch(41% 0.159 10.272);
   --color-rose-950: oklch(27.1% 0.105 12.094);
 
-  --color-grey-50: oklch(98.4% 0.003 247.858);
-  --color-grey-100: oklch(96.8% 0.007 247.896);
-  --color-grey-200: oklch(92.9% 0.013 255.508);
-  --color-grey-300: oklch(86.9% 0.022 252.894);
-  --color-grey-400: oklch(70.4% 0.04 256.788);
-  --color-grey-500: oklch(55.4% 0.046 257.417);
-  --color-grey-600: oklch(44.6% 0.043 257.281);
-  --color-grey-700: oklch(37.2% 0.044 257.287);
-  --color-grey-800: oklch(27.9% 0.041 260.031);
-  --color-grey-900: oklch(20.8% 0.042 265.755);
-  --color-grey-950: oklch(12.9% 0.042 264.695);
+  --color-slate-50: oklch(98.4% 0.003 247.858);
+  --color-slate-100: oklch(96.8% 0.007 247.896);
+  --color-slate-200: oklch(92.9% 0.013 255.508);
+  --color-slate-300: oklch(86.9% 0.022 252.894);
+  --color-slate-400: oklch(70.4% 0.04 256.788);
+  --color-slate-500: oklch(55.4% 0.046 257.417);
+  --color-slate-600: oklch(44.6% 0.043 257.281);
+  --color-slate-700: oklch(37.2% 0.044 257.287);
+  --color-slate-800: oklch(27.9% 0.041 260.031);
+  --color-slate-900: oklch(20.8% 0.042 265.755);
+  --color-slate-950: oklch(12.9% 0.042 264.695);
+
+  --color-stone-50: oklch(98.5% 0.001 106.423);
+  --color-stone-100: oklch(97% 0.001 106.424);
+  --color-stone-200: oklch(92.3% 0.003 48.717);
+  --color-stone-300: oklch(86.9% 0.005 56.366);
+  --color-stone-400: oklch(70.9% 0.01 56.259);
+  --color-stone-500: oklch(55.3% 0.013 58.071);
+  --color-stone-600: oklch(44.4% 0.011 73.639);
+  --color-stone-700: oklch(37.4% 0.01 67.558);
+  --color-stone-800: oklch(26.8% 0.007 34.298);
+  --color-stone-900: oklch(21.6% 0.006 56.043);
+  --color-stone-950: oklch(14.7% 0.004 49.25);
+
+  --color-grey-50: oklch(98.5% 0 0);
+  --color-grey-100: oklch(96.7% 0.001 286.375);
+  --color-grey-200: oklch(92% 0.004 286.32);
+  --color-grey-300: oklch(87.1% 0.006 286.286);
+  --color-grey-400: oklch(70.5% 0.015 286.067);
+  --color-grey-500: oklch(55.2% 0.016 285.938);
+  --color-grey-600: oklch(44.2% 0.017 285.786);
+  --color-grey-700: oklch(37% 0.013 285.805);
+  --color-grey-800: oklch(27.4% 0.006 286.033);
+  --color-grey-900: oklch(21% 0.006 285.885);
+  --color-grey-950: oklch(14.1% 0.005 285.823);
 
   /* Souped up easing functions */
   --ease-out: cubic-bezier(0.215, 0.61, 0.355, 1);
@@ -103,7 +127,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   line-height: 1.6;
   color: light-dark(var(--color-grey-900), var(--color-grey-50));
-  background: light-dark(var(--color-grey-100), var(--color-grey-800));
+  background: light-dark(var(--color-grey-100), var(--color-grey-900));
 }
 
 * {
